# prompt-preflight

./: .gitignore  .prompt-preflight.example.json  CONTRIBUTING.md  README.md  cspell.json  fix_syntax.py  pyproject.toml  test.md
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: benchmark.yml
TestPrompt/: test.md
docs/: CALIBRATION.md  CI.md  CLAUDE.md  CONFIG_SCHEMA.md  CROSS_TOOL_PARITY.md  EXAMPLES.md  INTEGRATIONS.md  KIRO.md  LAUNCH.md  PARITY_FIXTURES.md  POSTFLIGHT.md  RELEASE_READINESS.md  SETUP.md  TEAM_PROMPT_LIBRARIES.md  TEAM_SPEC_FIRST_WORKFLOW.md  TEMPLATES.md
docs/prompts/: README.md
hooks/: claude-hooks.json
schemas/: prompt-preflight.schema.json
scripts/: demo.py  install_claude_plugin.py  install_kiro_hook.py  install_prompt_preflight.py  lint_prompt_library.py  prompt_postflight.py  prompt_preflight_claude_hook.py  prompt_preflight_postflight_claude_hook.py  release_check.py  update_parity_fixtures.py
tests/: test_analyzer.py  test_benchmark_vague_prompts.py  test_calibration_corpus.py  test_claude_hook.py  test_claude_installer.py  test_config_schema.py  test_cross_tool_parity.py  test_host_telemetry.py  test_kiro_hook.py  test_kiro_installer.py  test_parity_fixtures.py  test_postflight.py  test_prompt_lint.py  test_release_check.py  test_spec_driven_routing.py  test_telemetry.py  test_templates.py  test_token_observability.py  test_unified_installer.py  test_writing_research_calibration.py
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
(+81 files in other folders)
