[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-preflight"
version = "0.4.0"
description = "Catch underspecified Codex and Claude Code prompts before expensive model calls."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Prompt Preflight contributors"}]
dependencies = []

[project.scripts]
prompt-preflight = "prompt_preflight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
