[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-preflight"
version = "0.6.0"
description = "Catch underspecified Codex, Claude Code, and Kiro prompts before expensive model calls."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Prompt Preflight contributors"}]
dependencies = []

[project.scripts]
prompt-preflight = "prompt_preflight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prompt_preflight = ["data/*.txt", "data/*.json"]
